src/snapshots/alma__parser__tests__test_expression__unary_operators.snap
---
source: src/parser.rs
assertion_line: 2239
expression: "parse(\"not False\")"
---
Input:

not False

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        1,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Unary {
            op: Node {
                start: Index(
                    0,
                ),
                end: Index(
                    0,
                ),
                value: Not,
            },
            expression: Node {
                start: Index(
                    1,
                ),
                end: Index(
                    1,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Bool(
                        false,
                    ),
                },
            },
        },
    },
}
